re PR c++/51526 ([C++11][constexpr] constexpr delegating constructor should be accepted)

PR c++/51526
	* semantics.c (build_data_member_initialization): Handle
	delegating constructor.
	(build_constexpr_constructor_member_initializers): Likewise.

From-SVN: r182499